# AudioTranscriber

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  _path_setup.py  build_exe.ps1  config.yaml.example  docker-compose.yml  gui.py  main.py  pyproject.toml  transcriber.py
config/: config.yaml.example
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  PROJECT_LAYOUT.md  SPEAKER_NAMES.md
scripts/: legacy_transcriber.py  test_pyannote_diarization.py
secrets/: .env.example
src/audiotranscriber/: __init__.py  __main__.py  cli.py
src/audiotranscriber/api/: __init__.py  app.py  rate_limit.py  security.py
src/audiotranscriber/config/: __init__.py  app_config.py
src/audiotranscriber/core/: __init__.py  constants.py  device.py  exceptions.py  exporters.py  ffmpeg.py  formatter.py  memory.py  model_manager.py  paths.py  settings.py  speaker_names.py  startup_checks.py
src/audiotranscriber/gui/: __init__.py  app.py  constants.py  controller.py
src/audiotranscriber/gui/views/: __init__.py  layout.py
src/audiotranscriber/services/: __init__.py  diarization.py  diarization_backend.py  diarization_common.py  diarization_local.py  diarization_pyannote.py  job_queue.py  transcription_service.py
